# argument-structure-prediction

./: Dockerfile  README.md  pyproject.toml  requirements.txt
results/: README.md
src/: bert_embd.py  clf_gnn.py  data.py  data_load.py  gnn.py  gnn_custom.py  gnn_gat.py  gnn_gcn.py  gnn_sage.py  main.py  threads.py  utils.py
src/embeddings/: __init__.py  bag_of_words.py  bert_generic.py  doc2vec.py  word2vec.py
src/importer/: README.md  __init__.py  importer.py
src/importer/filters/: __init__.py  compexity.py  is_balanced_class.py  is_connected.py  min_size.py  min_sparsity.py
src/importer/transforms/: __init__.py  edge_label_encoder.py  embed_node_text.py  extract_additional_features.py  graph_to_pyg.py  keep_selected_nodes.py  largest_connected_graph.py  remove_link_nodes copy.py  remove_link_nodes.py
src/models/: __init__.py
src/models/hybrid/: sequential_stacking.py
src/models/single/: gat.py  gcn copy.py  gcn.py  gin.py
src/training/: hyperparameter_search.py  sequential_stacking.py  tainer.py
