[tool.poetry]
name = "graph-based-argument-structure"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gensim = "4.3.2"
matplotlib = "3.8.2"
networkx = "3.2.1"
nltk = "3.8.1"
numpy = "1.26.4"
scikit-learn = "1.3.2"
torch = "2.1.1"
torch-geometric = "2.4.0"
transformers = "4.35.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
